--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a4bd7f">  <td>20/01/27 14:56:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@78b1cc93]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@343856911</td>   <td></td> </tr>
-<tr bgcolor="a4bd7f">  <td>20/01/27 14:57:19</td>   <td>36942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@78b1cc93]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@343856911</td>   <td></td> </tr>
-<tr bgcolor="a4bd7f">  <td>20/01/27 14:57:01</td>   <td>19380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.uploadPhotoTest()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@78b1cc93]">uploadPhotoTest</td> 
-  <td>main@343856911</td>   <td></td> </tr>
+<tr bgcolor="d26ea6">  <td>20/01/27 16:28:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@1df82230]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@345902941</td>   <td></td> </tr>
+<tr bgcolor="d26ea6">  <td>20/01/27 16:29:29</td>   <td>49825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@1df82230]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@345902941</td>   <td></td> </tr>
+<tr bgcolor="d26ea6">  <td>20/01/27 16:28:56</td>   <td>16921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.uploadPhotoTest()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@1df82230]">uploadPhotoTest</td> 
+  <td>main@345902941</td>   <td></td> </tr>
 </table>
