--- a/test-output/old/Facebook WebApplication/methods.html
+++ b/test-output/old/Facebook WebApplication/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Facebook WebApplication</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7a691">  <td>20/01/27 14:59:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.bridgelabz.fb.testcase.LoginPageTest@21507a04]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@580718781</td>   <td></td> </tr>
-<tr bgcolor="b7a691">  <td>20/01/27 14:59:39</td>   <td>4790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest(java.lang.String, java.lang.String)[pri:0, instance:com.bridgelabz.fb.testcase.LoginPageTest@21507a04]">loginTest</td> 
-  <td>main@580718781</td>   <td></td> </tr>
-<tr bgcolor="b7a691">  <td>20/01/27 14:59:53</td>   <td>18714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.bridgelabz.fb.testcase.LoginPageTest@21507a04]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@580718781</td>   <td></td> </tr>
-<tr bgcolor="a9a7fe">  <td>20/01/27 14:59:53</td>   <td>18868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@143640d5]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@580718781</td>   <td></td> </tr>
-<tr bgcolor="a9a7fe">  <td>20/01/27 15:00:12</td>   <td>37375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.uploadPhotoTest()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@143640d5]">uploadPhotoTest</td> 
-  <td>main@580718781</td>   <td></td> </tr>
-<tr bgcolor="a9a7fe">  <td>20/01/27 15:00:41</td>   <td>66074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@143640d5]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@580718781</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>20/01/27 16:40:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.bridgelabz.fb.testcase.LoginPageTest@13c10b87]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1541857308</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>20/01/27 16:40:19</td>   <td>3806</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest(java.lang.String, java.lang.String)[pri:0, instance:com.bridgelabz.fb.testcase.LoginPageTest@13c10b87]">loginTest</td> 
+  <td>main@1541857308</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>20/01/27 16:40:33</td>   <td>17519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.bridgelabz.fb.testcase.LoginPageTest@13c10b87]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1541857308</td>   <td></td> </tr>
+<tr bgcolor="b0b186">  <td>20/01/27 16:40:33</td>   <td>17600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@6a01e23]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1541857308</td>   <td></td> </tr>
+<tr bgcolor="b0b186">  <td>20/01/27 16:40:53</td>   <td>37390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.uploadPhotoTest()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@6a01e23]">uploadPhotoTest</td> 
+  <td>main@1541857308</td>   <td></td> </tr>
+<tr bgcolor="b0b186">  <td>20/01/27 16:41:32</td>   <td>76233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.bridgelabz.fb.testcase.HomePageTest@6a01e23]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1541857308</td>   <td></td> </tr>
 </table>
